# netfortune

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  License.md
client/: CMakeLists.txt  main.cpp
config/: netfortune-server.toml
fproto/: CMakeLists.txt  config.hpp.in  fproto.cpp  fproto.hpp
script/: daytime_client.py  multi_proc_client.py
server/: CMakeLists.txt  fserver.cpp  fserver.hpp  fsession.cpp  fsession.hpp  main.cpp
src/: config.hpp.in
src/fproto/: CMakeLists.txt  fproto.cpp  fproto.hpp
src/server/: CMakeLists.txt  configuration.hpp  dbcon.cpp  dbcon.hpp  fcookie.cpp  fcookie.hpp  fserver.cpp  fserver.hpp  fsession.cpp  fsession.hpp  main.cpp  utility.hpp
todo/: todo.txt
